<resources>
    <string name="app_name">Mine Finder Hex</string>
    <string name="app_description">A hexagonal version of the classic mine sweeper game</string>
    <string name="action_settings">Settings</string>
    <string name="action_zoom_in">Demo zoom in</string>
    <string name="action_zoom_out">Demo zoom out</string>
    <string name="action_pan_left">Demo pan left</string>
    <string name="action_pan_right">Demo pan right</string>
    <string name="action_pan_up">Demo pan up</string>
    <string name="action_pan_down">Demo pan down</string>
    <string name="bomb" translatable="false">💣</string>
    <string name="close_game">Close game</string>
    <string name="difficulty">Difficulty</string>
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Challenging</item>
        <item>Extreme</item>
    </string-array>
    <string name="drag_handle">Drag handle</string>
    <string-array name="fieldSize">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>
    <string name="exitGame">Exit Game</string>
    <string name="flag" translatable="false">🚩</string>
    <string name="resumeGame">Resume Game</string>
    <string name="startGame">Start Game</string>
    <string name="size">Size</string>
</resources>
