<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".game.SetupFragment"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/whiteFade"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/whiteFade"
        android:text="@string/resumeGame"
        android:textColor="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/whiteFade"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/sizeSpinner"
            android:text="@string/size"
            android:textColor="@color/colorPrimary"
            />

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/whiteFade"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/difficultySpinner"
            android:text="@string/difficulty"
            android:textColor="@color/colorPrimary"
            />

        <Spinner
            android:id="@+id/difficultySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/whiteFade"
        android:text="@string/startGame"
        android:textColor="@color/colorPrimary"
        />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/whiteFade"
        android:text="@string/exitGame"
        android:textColor="@color/colorPrimary"
        />

    <View
        android:layout_width="1dp"
        android:layout_height="40dp"
        />

</LinearLayout>